--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^3.10.0",
     "react-markdown": "^4.3.1",
+    "react-particles-js": "^3.2.1",
+    "react-scroll": "^1.7.16",
+    "react-scrollspy": "^3.4.2",
+    "react-spring": "^8.0.27",
     "strapi-provider-upload-cloudinary": "^3.0.0"
   },
   "devDependencies": {
